--- a/index-START.html
+++ b/index-START.html
@@ -61,7 +61,8 @@
   window.addEventListener('keydown', function (e) {
     // console.log(e.keyCode);
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    if(!audio) return;
+    if(!audio) return; // stops the function from running altogether
+    audio.currentTime = 0; // rewind to the start
     audio.play();
   });
 </script>
