--- a/index-START.html
+++ b/index-START.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+// the keys are mapped as http://keycode.info/
+
 <body>
 
-  // the keys are mapped as http://keycode.info/
+<h1>Java Drum kit</h1>
+<p>Do you hear what I hear?</p>
   <div class="keys">
+  
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
@@ -47,19 +51,18 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+    
+    <!-- // audios called when triggered by keys -->
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
   </div>
-
-  // audios called when triggered by keys
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
-
   <script>
     // This function is called once the key is triggered 
     function playSound(e) {
@@ -84,6 +87,7 @@
 
   </script>
 
+  
 
 </body>
 
