--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 
   </script>
 
-  
+  <footer>
+    <p>Made by Alexandre Vieira 💻</p>
+    <p><a href="https://github.com/alex-504">GitHub</a></p>
+  </footer>
 
 </body>
 
